@@ -11,6 +11,7 @@ Version 0.3-5
     parameter `modelpar`.
   * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.
   * corrected typo in `?similarityweight`, sigma --> threshold.
+  * added snapshot feature to `condtour`.
   * changed treatment of conditioning predictors in `condtour` to be more like
     `ceplot`, plus a hacky fix to `update.xcplot` for `condtour` providing
     predictor values instead of mouseclicks.
